[package]
name = "desktop_experiment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
serde_json = "1.0"

[dependencies.reqwest]
version = "0.11.10"
features = ["blocking"]

[[bin]]
name = "desktop_experiment"
path = "main.rs"
